fix(icons): Added "." export to @tabler/icons package.json
Fixed according to #718 (https://github.com/tabler/tabler-icons/issues/718)

--- a/packages/icons/package.json
+++ b/packages/icons/package.json
@@ -11,6 +11,9 @@
   "main": "dist/cjs/tabler-icons.js",
   "main:umd": "dist/umd/tabler-icons.js",
   "exports": {
+    ".": [
+      "./dist/es/tabler-icons.js"
+    ],
     "./*": [
       "./icons/*"
     ]
